HVAC Backup 2/objects/Warranty_Conditions__c.object
<CustomObject>
    <fields>
        <fullName>Branch_Operator__c</fullName>
        <label>Branch Operator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>NOT IN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <label>Branch</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BLUESTAR</fullName>
                </value>
                <value>
                    <fullName>NON BLUESTAR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Capacity_UOM__c</fullName>
        <label>Capacity UOM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Capacity_UOM</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_SubType_Operator__c</fullName>
        <label>Customer SubType Operator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Equal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_SubType__c</fullName>
        <label>Customer SubType</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Installation_From__c</fullName>
        <label>Installation From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Installation_To__c</fullName>
        <label>Installation To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Installation_date_operator__c</fullName>
        <label>Installation Date Operator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Between</fullName>
                </value>
                <value>
                    <fullName>Greater Than</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_NAMO__c</fullName>
        <label>Is NAMO</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Modals__c</fullName>
        <label>Modals</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Model_Operator__c</fullName>
        <label>Model Operator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Equals</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Namo__c</fullName>
        <label>Namo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>True</fullName>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Sub_Family_Operator__c</fullName>
        <label>Product Sub Family Operator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>NOT IN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Sub_Family__c</fullName>
        <label>Product Sub Family</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_family_Operator__c</fullName>
        <label>Product family Operator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>NOT IN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Registration_Source__c</fullName>
        <label>Registration Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Installation Ticket</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UOM_Operator__c</fullName>
        <label>UOM Operator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Equal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Warranty_Term__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Warranty Term</label>
        <referenceTo>WarrantyTerm</referenceTo>
        <relationshipLabel>Warranty Conditions</relationshipLabel>
        <relationshipName>Warranty_Conditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Warranty Conditions</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Warranty_Term__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>WC - {0000}</displayFormat>
        <label>Warranty Condition</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Warranty Conditions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>